--- a/pkg/frontend/src/styles/views/myAccount.module.scss
+++ b/pkg/frontend/src/styles/views/myAccount.module.scss
@@ -1,7 +1,7 @@
 @import '../global/variables.module.scss';
 
 .wrap {
-  margin-top: 100px;
+  margin-top: 40px;
 
   @media (min-width: $lg) {
     margin-top: 120px;
